synchronisation du canva

--- a/Drawmong-Us/src/main/webapp/WEB-INF/web.xml
+++ b/Drawmong-Us/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <context-param>
+        <param-name>org.apache.tomcat.websocket.textBufferSize</param-name>
+        <param-value>524288</param-value>
+    </context-param>
+    <context-param>
+        <param-name>org.apache.tomcat.websocket.binaryBufferSize</param-name>
+        <param-value>524288</param-value>
+    </context-param>
+
 </web-app>
