--- a/Drawmong-Us/build.gradle
+++ b/Drawmong-Us/build.gradle
@@ -14,6 +14,8 @@ ext {
     junitVersion = '5.8.2'
 }
 
+
+
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
@@ -25,7 +27,7 @@ dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
     compileOnly('javax.websocket:javax.websocket-api:1.1')
     implementation('com.google.code.gson:gson:2.8.9')
-
+    implementation('javax.servlet:jstl:1.2')
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
