--- a/Drawmong-Us/build.gradle
+++ b/Drawmong-Us/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
     compileOnly('javax.websocket:javax.websocket-api:1.1')
     implementation('com.google.code.gson:gson:2.8.9')
-
+    implementation 'javax.servlet:jstl:1.2'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
